--- a/src/main/resources/static/react-client/public/index.html
+++ b/src/main/resources/static/react-client/public/index.html
@@ -27,6 +27,8 @@
     <title>React App</title>
     <script type="javascript" src="bootstrap.min.js"></script>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+          crossorigin="anonymous">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
